--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,5 +24,5 @@ jobs:
         with:
           source_repo: "https://github.com/Wenmoux/checkbox.git"
           source_branch: "master"
-          destination_branch: "master"
+          destination_branch: "master/master"
           github_token: ${{ secrets.PAT || github.event.client_payload.PAT }}
